<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#14142B"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="70dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Back"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:layout_marginRight="60dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="80dp"
            android:paddingBottom="70dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"

            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:background="#F4F6FC"
                android:hint="@string/put_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:background="#F4F6FC"
                android:hint="@string/put_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:background="#F4F6FC"
                android:hint="@string/put_password"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/re_password"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/re_type_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:background="#F4F6FC"
                android:hint="@string/put_re_password"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/orange"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>