<!-- item_product.xml -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="190dp"
    android:layout_height="310dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/shape_item"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/computer"

            />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:gravity="center"
                android:id="@+id/buyButton"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:text="@string/buy_item"
                android:textColor="@android:color/white"
                android:background="@drawable/shape_button_buy"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
