<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="300dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/shape_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- FrameLayout used to overlay heart icon on the product image -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/computer"
                android:padding="30dp"
                android:scaleType="centerCrop"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/heartIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|top"
                    android:src="@drawable/myheart"
                    android:background="@drawable/favorite_back"
                    />
<!--                <ImageView-->
<!--                    android:id="@+id/heartIcon"-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_gravity="end|top"-->
<!--                    android:src="@drawable/heart"-->
<!--                    android:background="@drawable/favorite_back"-->
<!--                    />-->
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_product"
            android:textSize="18sp"
            android:maxLines="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productDesc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:maxLines="3"
            android:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_vertical" />

            <TextView
                android:gravity="center"
                android:id="@+id/buyButton"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/buy_item"
                android:textColor="@android:color/white"
                android:background="@drawable/shape_button_buy" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
